--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.66.0",
     "@types/react-helmet-async": "^1.0.1",
+    "firebase": "^11.3.0",
     "gsap": "^3.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
