--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-helmet-async": "^1.0.1",
     "gsap": "^3.12.7",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^7.1.5",
