--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^7.1.5",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.8",
