--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^1.3.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.1.5",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-svg": "^16.3.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/react-input-mask": "^3.0.6",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
